@@ -1,5 +1,8 @@
 Changes with APR-util 1.0
 
+  *) Fix occasional crash in apr_rmm_realloc().  PR 22915.
+     [Jay Shrauner <shrauner inktomi.com>]
+
   *) The whole codebase was relicensed and is now available under
      the Apache License, Version 2.0 (http://www.apache.org/licenses).
      [Apache Software Foundation]
